iac-modules/extensions/vllm-nvlink/v0.9-v1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-nvlink
spec:
  parentRefs:
  - name: main-gateway
    namespace: kgateway-system
  hostnames:
  - "inference-nvlink.nebius.internal"
  rules:
  - backendRefs:
    - name: vllm-nvlink
      port: 8000
